Wed Aug  7 09:51:54 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* hash.c (rb_hash_equal): should check default values.

Fri Aug  2 01:21:52 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c (s_recvfrom): update RSTRING len.

Thu Aug  1 13:51:30 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* io.c (io_fread): return value was longer when EWOULDBLOCK
	  occurred.

Wed Jul 31 14:11:43 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_undef): undef should be done for klass, not ruby_class.

Tue Jul 30 15:24:07 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tcltklib/stubs.c (ruby_tcltk_stubs): win32_getenv returns
	  the same address always, so allocate string by ruby_strdup.

Mon Jul 22 17:23:00 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (error_handle): should handle TAG_THROW as well.

Fri Jul 12 00:51:09 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (rb_eval): fixed line number in string interpolation.

	* parse.y (str_extend): ditto.

Thu Jul 11 21:30:38 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* parse.y (yylex): should pushback proper char after '<<'.

Thu Jul 11 09:00:43 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_slice_bang): if there's no corresponding
	  substring, slice! should return nil without exception.

Fri Jul  5 09:17:00 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_split_m): accept separator value nil as well.

Fri Jul  5 05:00:40 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb (CGI#initialize): improvement for mod_ruby.
	thanks to Sean Chittenden <sean@ruby-lang.org>, Shugo Maeda
	<shugo@modruby.net>

Wed Jul  3 02:32:31 2002  Wakou Aoyama  <wakou@ruby-lang.org>

	* lib/cgi.rb (CGI#initialize): improvement for mod_ruby.

Tue Jul  2 14:53:10 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* class.c (include_class_new): module may be T_ICLASS; retrieve
	  original module information.
